classDiagram
    class RegisteredUserController {
        <<controller>>
        +store(request)
    }

    class ParticipantProfileController {
        <<controller>>
        +index()
        +update(request)
    }

    class Participant {
        -participantID: int (key)
        -name: string
        -icNumber: string
        -email: string
        -phone: string
        -password: string
        -profilePicture: string
        
        +create()
        +getDetails()
        +save()
    }

    RegisteredUserController --> Participant
    ParticipantProfileController --> Participant
